[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mtls-demo"
version = "0.1.0"
description = "MVP Python mTLS command-and-control demo"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "textual>=0.58,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
mtls-demo-server = "mtls_demo.server.api:main"
mtls-demo-agent = "mtls_demo.agent.client:main"
mtls-demo-tui = "mtls_demo.server.tui:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["client"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
